js/js.translator/testData/incremental/invalidation/companionPropertiesWithCrossModuleInliner/lib1/l1.0.kt
class MyClass {
    companion object {
        val stringProperty = "0"
    }
}
